<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/labelPrimaryInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/key_label_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/keyPrimaryInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:hint="@string/key_code_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/delayPrimaryInput"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/key_delay_hint"
        android:inputType="number"
        android:text="0" />
</LinearLayout>
